@@ -2,41 +2,46 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.List;
 
 public class FilePartReader {
-
     private String filePath;
     private Integer fromLine;
     private Integer toLine;
 
-    public FilePartReader(){
-        this.filePath = "some invalid path";
-        this.fromLine = -24;
-        this.toLine = 42;
+    public FilePartReader() {
+        // what's the point of this
+        filePath = "some invalid path";
+        fromLine = -24;
+        toLine = 42;
     }
 
-    public void setup(String filePath, Integer fromLine, Integer toLine){
-        if (toLine < fromLine || fromLine < 1){
-            throw new IllegalArgumentException("Argument exception");
-        }
+    public void setup(String filePath, Integer fromLine, Integer toLine) {
 
-        this.filePath = filePath;
+        if (fromLine < 1) throw new IllegalArgumentException("fromLine parameter cannot be smaller than 1!");
+        if (toLine < fromLine) throw new IllegalArgumentException("toLine parameter cannot be smaller than fromLine!");
+
         this.fromLine = fromLine;
         this.toLine = toLine;
+        this.filePath = filePath;
     }
 
     public String read() throws IOException {
-        return Files.readString(Paths.get(filePath), StandardCharsets.US_ASCII);
+        byte[] encoded = Files.readAllBytes(Paths.get(filePath));
+        return new String(encoded, StandardCharsets.UTF_8);
     }
 
     public String readLines() throws IOException {
-        List<String> lines = Files.readAllLines(Paths.get(filePath));
-        String createdString = "";
 
-        for (int i = fromLine; i <= toLine; i++) {
-            createdString += lines.get(i);
+        String[] allLines =this.read().split("\n");
+        StringBuilder contents = new StringBuilder();
+
+        for (int lineNum = fromLine; lineNum <= toLine; lineNum++) {
+            if (fromLine <= lineNum) {
+                contents.append(allLines[lineNum-1]).append("\n");
+            }
         }
-        return createdString;
+
+        return contents.toString();
     }
+
 }
